--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.3",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.28",
     "vue": "^3.2.13",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^4.0.3",
+    "vue3-markdown-it": "^1.0.10",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
