--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@giscus/vue": "^2.2.6",
     "axios": "^1.2.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.28",
