--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.28",
+    "kbar": "^0.1.0-beta.39",
     "marked": "^4.2.12",
     "vue": "^3.2.13",
     "vue-markdown": "^2.2.4",
