--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.2.28",
     "kbar": "^0.1.0-beta.39",
     "marked": "^4.2.12",
+    "mitt": "^3.0.0",
     "vue": "^3.2.13",
     "vue-markdown": "^2.2.4",
     "vue-router": "^4.0.3",
